# My-Git

./: Error-Square.py  Giroscope-Rotate.py  Git-Guide.md  Git.md  Kernel-Move.py  Light-Color-Albedo.odt  Line-approcs.py  Metalic-Graph.py  Plot.txt  Right-Down.py  Searcher.cpp  Sort-Array.cpp  Subvector.cpp  Summary.cpp  calivrationDistance.txt  disableVint.txt  jetMover.py  main.cpp  preasure00.txt  preasure10.txt  preasure20.txt  preasure30.txt  preasure40.txt  preasure50.txt  preasure52Monometr.txt  preasure60.txt  preasure70.txt  preasure80.txt  preasure90.txt
C-Codes/: BubbleSort.cpp  String.cpp  Subvector.cpp  Vector.cpp  alg.cpp  array.cpp  carno.cpp  chrono.cpp  cycle.cpp  data.cpp  foo.cpp  graph.cpp  hoo.cpp  ifstream.cpp  joo.cpp  lab.h  linear.h  list.h  main.cpp  matplotlib.h  matrix.cpp  phi.cpp  polynomial.cpp  polynomial.h  qv.cpp  set.h  student.cpp  subforwardlist.cpp  subforwardlist_new.cpp  subset.cpp  subvector.cpp  subvector_new.cpp  succession.cpp  taylor.cpp  template.cpp  test.cpp  vector.h  vector3d.cpp
Chart/: CMakeLists.txt  chernovik.txt
Chart/cxx/: main.cpp
Chart/src/: Mpl.cpp
Lab/Ex/: main.tex
Python-Codes/: 3d.py  EllipsSatell.py  Graph-Mix.py  JetMeasure.py  Line-Error.py  Voltage.py  cycle.py  satellite.py  space.py  с.py
Taylor/: algebraic.cpp  compiler.cpp  divide.cpp  main.cpp  polynomial.cpp  power.cpp  sublimate.cpp  subwolfram.md  summary.cpp  t.cpp  taylor.cpp  taylor.h  taylor.hpp  taylor_nw.cpp  test.cpp
Tex/3.1.3/: 3.1.3.py  main.aux  main.fdb_latexmk  main.fls  main.tex
Tex/3.1.5/: 3.5.1.py  main.tex
(+28 files in other folders)
